--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
+        <link rel="stylesheet" href="http:////cdn.jsdelivr.net/foundation/5.0.2/css/foundation.min.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
     </head>
     <body>
