--- a/_layouts/words.html
+++ b/_layouts/words.html
@@ -1,12 +1,16 @@
 {% include head.html %}
-	<main>
-		{% include nav.html %}
-	    <h1>{{ page.title }}</h1>
+	
+<div class="row">
+  <div class="small-12 medium-3 columns">
+	{% include nav.html %}
+  	</div>
+  <div class="small-12 medium-9 columns">
+	<h1>{{ page.title }}</h1>
 	    <p>{{ page.description }}</p>
 
 	    {{ content }}
-	</main>
-
+	</div>
+</div>
 	
 
 {% include foot.html %}
