--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,15 @@
 ---
 layout: words
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+	
+<h3 class="lead">
+	{{ page.lead }}
+
+			<div class="frame">
+				<img src="{{site.url}}/words/assets/{{page.img }}" alt="{{ page.title }}">
+			</div>
+	
+</h3>
 
 <div class="post">
 {{ content }}
