--- a/_layouts/words.html
+++ b/_layouts/words.html
@@ -6,8 +6,8 @@
   	</div>
   <div class="small-12 medium-9 columns">
 	<h1>{{ page.title }}</h1>
-	    <p>{{ page.description }}</p>
-
+	    <h4>{{ page.description }}</h4>
+		 
 	    {{ content }}
 	</div>
 </div>
