--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <link rel="stylesheet" href="http:////cdn.jsdelivr.net/foundation/5.0.2/css/foundation.min.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
+        <meta name="viewport" content="width=device-width">
+
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/css/syntax.css">
+
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="/css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+        <link rel="icon"
+          type="image/png"
+          href="logo2.png">
+
     </head>
     <body>
