--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
-{{ head }}
-{{ nav }}
+{% include head.html %}
+{% include nav.html %}
 
       <div id="main">
           {{ content }}
       </div>
 
-{{ foot }}
+{% include foot.html %}
